# promptloom

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: config.yaml  config_full.yaml  config_with_validation.yaml  correction.md  prompt.md  prompt_structured.md
examples/data/: sample.txt
examples/schemas/: summary_schema.json
src/promptloom/: __init__.py  cli.py  config.py  preflight.py  prompt.py  report.py  runner.py  validation.py
tests/: __init__.py  test_config.py  test_prompt.py  test_validation.py
